completed the carousel design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-nav-bar></app-nav-bar>
 <app-search-nav-bar></app-search-nav-bar>
 <app-menu-nav-bar></app-menu-nav-bar>
+<app-carousel-section></app-carousel-section>
