--- a/src/app/pages/carousel-section/carousel-section.component.html
+++ b/src/app/pages/carousel-section/carousel-section.component.html
@@ -32,7 +32,6 @@
                       style="border-radius: 5rem; padding: 5px; width: 10rem;">{{'shop_now' | translate}}</button>
             </div>
           </div>
-
         </div>
       </div>
       <div class="carousel-item">
@@ -61,7 +60,6 @@
                       style="border-radius: 5rem; padding: 5px; width: 10rem;">{{'shop_now' | translate}}</button>
             </div>
           </div>
-
         </div>
       </div>
       <div class="carousel-item">
@@ -90,7 +88,6 @@
                       style="border-radius: 5rem; padding: 5px; width: 10rem;">{{'shop_now' | translate}}</button>
             </div>
           </div>
-
         </div>
       </div>
     </div>
@@ -103,43 +100,43 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-
-
-  <div class="sub-desc d-grid" >
-    <div class="item1 d-grid p-4">
-      <div class="img">
-        <img src="assets/images/shipping-boat.svg" style="width: 6rem; height: 4rem;" class="bg-light" alt="no image">
+  <div class="container">
+    <div class="row">
+      <div class="item1 col-md-3 col-12 col-sm-6 p-4">
+        <div class="img">
+          <img src="assets/images/shipping-boat.svg" style="width: 5rem; height: 3rem;" class="bg-light" alt="no image">
+        </div>
+        <div class="text">
+          <span>{{'Free_Delivery' | translate}}<p>Free shipping on all order</p></span>
+        </div>
       </div>
-      <div class="text">
-        <span>{{'Free_Delivery' | translate}}<p>Free shipping on all order</p></span>
+      <div class="item1 col-md-3 col-12 col-sm-6 p-4">
+        <div class="img">
+          <img src="assets/images/operator-call.svg" style=" height: 3rem;" class="bg-light"
+               alt="no image">
+        </div>
+        <div class="text">
+          <span>Free Delivery <p>Free shipping on all order</p></span>
+        </div>
       </div>
-    </div>
-    <div class="item1 d-grid p-4">
-      <div class="img">
-        <img src="assets/images/operator-call.svg" style=" height: 6rem;" class="bg-light"
-             alt="no image">
+      <div class="item1 col-md-3 col-12 col-sm-6 p-4">
+        <div class="img">
+          <img src="assets/images/dollar-money-paper.svg" style="width: 5rem; height: 3rem;"
+               class="bg-light"
+               alt="no image">
+        </div>
+        <div class="text">
+          <span>Free Delivery <p>Free shipping on all order</p></span>
+        </div>
       </div>
-      <div class="text">
-        <span>Free Delivery <p>Free shipping on all order</p></span>
-      </div>
-    </div>
-    <div class="item1 d-grid p-4">
-      <div class="img">
-        <img src="assets/images/dollar-money-paper.svg" style="width: 6rem; height: 4rem;"
-             class="bg-light"
-             alt="no image">
-      </div>
-      <div class="text">
-        <span>Free Delivery <p>Free shipping on all order</p></span>
-      </div>
-    </div>
-    <div class="item1 d-grid p-4">
-      <div class="img">
-        <img src="assets/images/discount-percent.svg" style="width: 6rem; height: 4rem;" class="bg-light"
-             alt="no image">
-      </div>
-      <div class="text">
-        <span>Free Delivery <p>Free shipping on all order</p></span>
+      <div class="item1 col-md-3 col-12 col-sm-6 p-4">
+        <div class="img">
+          <img src="assets/images/discount-percent.svg" style="width: 5rem; height: 3rem;" class="bg-light"
+               alt="no image">
+        </div>
+        <div class="text">
+          <span>Free Delivery <p>Free shipping on all order</p></span>
+        </div>
       </div>
     </div>
   </div>
