--- a/src/app/components/menu-nav-bar/menu-nav-bar.component.html
+++ b/src/app/components/menu-nav-bar/menu-nav-bar.component.html
@@ -8,27 +8,28 @@
     <img src="assets/images/burger-menu.png" class="me-3" alt="no logo" style="width: 1.9rem; height:2rem;">
         {{'Categories' | translate}}
   </button>
-    <ul class="dropdown-menu w-100" >
-      <li><a class="dropdown-item" href="#" *ngFor="let category of categories">{{category.name}}<hr class="dropdown-divider"></a>
+    <ul class="dropdown-menu w-100">
+      <li>
+        <a class="dropdown-item" href="#" *ngFor="let category of categories">{{category.name}}<hr class="dropdown-divider"></a>
       </li>
     </ul>
   </li>
   <li class="nav-item ">
     <a class="nav-link text-black" href="#" role="button" aria-expanded="false">{{'Home' | translate}}</a>
   </li>
-  <li class="nav-item dropdown ">
-    <div class="dropdown">
-    <a class="nav-link dropdown-toggle text-black dropbtn" data-bs-toggle="dropdown" href="#" role="button"
-       aria-expanded="false">{{'Shop' | translate}}</a>
-    <ul class="dropdown-menu dropdown-content">
-      <li><a class="dropdown-item" href="#">Action</a></li>
-      <li><a class="dropdown-item" href="#">Another action</a></li>
-      <li><a class="dropdown-item" href="#">Something else here</a></li>
-      <li><hr class="dropdown-divider"></li>
-      <li><a class="dropdown-item" href="#">Separated link</a></li>
-    </ul>
-    </div>
-  </li>
+<!--  <li class="nav-item dropdown ">-->
+<!--    <div class="dropdown">-->
+<!--    <a class="nav-link dropdown-toggle text-black dropbtn" data-bs-toggle="dropdown" href="#" role="button"-->
+<!--       aria-expanded="false">{{'Shop' | translate}}</a>-->
+<!--    <ul class="dropdown-menu dropdown-content">-->
+<!--      <li><a class="dropdown-item" href="#">Action</a></li>-->
+<!--      <li><a class="dropdown-item" href="#">Another action</a></li>-->
+<!--      <li><a class="dropdown-item" href="#">Something else here</a></li>-->
+<!--      <li><hr class="dropdown-divider"></li>-->
+<!--      <li><a class="dropdown-item" href="#">Separated link</a></li>-->
+<!--    </ul>-->
+<!--    </div>-->
+<!--  </li>-->
   <li class="nav-item ">
     <a class="nav-link text-black" href="#">{{'Cell_Phones' | translate}}</a>
   </li>
