--- a/src/app/pages/footer-section/footer-section.component.html
+++ b/src/app/pages/footer-section/footer-section.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-light">
-  <div class="container-fluid">
+  <div class="container-fluid position-relative">
     <a class="navbar-brand">
           <div class="newsletter-text ps-5 pt-5 pb-4">
             <h3 class="text-light ">Sign Up For NewsLetters</h3>
